--- a/symba-webapp/src/main/webapp/symba.css
+++ b/symba-webapp/src/main/webapp/symba.css
@@ -5,10 +5,10 @@
  * To view the full licensing information for this software and ALL other files contained
  * in this distribution, please see LICENSE.txt
  *
- * $LastChangedDate:$
- * $LastChangedRevision:$
- * $Author:$
- * $HeadURL:$
+ * $LastChangedDate$
+ * $LastChangedRevision$
+ * $Author$
+ * $HeadURL$
  *
  */
 
@@ -249,19 +249,23 @@ text-transform: uppercase;
 }
 
 fieldset {
+position: relative;
 float: left;
 clear: both;
 width: 100%;
 margin: 0 0 1.5em 0;
 padding: 0;
 border: 1px solid #BFBAB0;
-background-color: #BAE1F7;
-/*background-color: #A7DAF2;*/
-/*background-color: #DFEFFF;*/
+background-color: #F2EFE9;
 }
 
+
+
 legend {
+position: relative;
 margin-left: 1em;
+left: -7px;
+top: -0.75em;
 padding: 0;
 color: #000;
 font-weight: bold;
@@ -270,8 +274,10 @@ font-weight: bold;
 
 fieldset ol {
 padding: 1em 1em 0 1em;
+padding-top: 0.25em;
 list-style: none;
 }
+
 fieldset li {
 padding-bottom: 1em;
 }
