visually displays which cells have been modified and which are, as yet, unchanged.

--- a/symba-webapp/src/net/sourceforge/symba/web/public/symba.css
+++ b/symba-webapp/src/net/sourceforge/symba/web/public/symba.css
@@ -19,3 +19,15 @@ BODY {
 .experiment-OddStep {
     background-color: #FFFF99;
 }
+
+.cell-modified {
+    background-color: lightgreen;
+}
+
+.textbox-warning {
+    border-color: crimson
+}
+
+.textbox-accepted {
+    border-color: green
+}
