--- a/symba-webapp/src/net/sourceforge/symba/web/public/symba.css
+++ b/symba-webapp/src/net/sourceforge/symba/web/public/symba.css
@@ -31,3 +31,28 @@ BODY {
 .textbox-accepted {
     border-color: green
 }
+
+/* The styles below modified from those found in http://demo.swfupload.org/v220/css/default.css */
+
+div.fieldset {
+    border: 1px solid #afe14c;
+    margin: 10px 0;
+    padding: 20px 10px;
+}
+
+div.fieldset span.legend {
+    position: relative;
+    background-color: #FFF;
+    padding: 3px;
+    top: -30px;
+    font: 14px Arial, Helvetica, sans-serif; /*font: 700 14px Arial, Helvetica, sans-serif;*/
+    color: #73b304;
+}
+
+div.flash {
+    width: 375px;
+    margin: 10px 5px;
+    border-color: #D9E4FF;
+    border-radius: 5px;
+
+}
