Added formal templating (templates cannot be modifed, but can be copied. Their copies may be changed however you like - this latter behaviour may changed based on user requirements). Refactored out the step panels (editable versus read-only) into their own classes.

--- a/symba-webapp/src/net/sourceforge/symba/web/public/symba.css
+++ b/symba-webapp/src/net/sourceforge/symba/web/public/symba.css
@@ -12,6 +12,11 @@ BODY {
     background: #ffffe0;
 }
 
+.textbox-legend {
+    font-style: italic;
+    font-weight: bold;
+}
+
 .experiment-EvenStep {
     background-color: #FFFFFF;
 }
