--- a/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
+++ b/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
@@ -22,7 +22,8 @@ BODY {
 }
 
 .experiment-OddStep {
-    background-color: #FFFF99;
+    border: solid 1px forestgreen;
+    background-color: #EBFFEB;;
 }
 
 .cell-modified {
@@ -37,7 +38,13 @@ BODY {
 
 .textbox-accepted {
     border-color: green;
-    background-color: #EBFFEB;;
+    background-color: #EBFFEB;
+}
+
+/* Change the following style to change how clickable text is displayed in SyMBA */
+.clickable-text {
+    color: green;
+    text-decoration: underline;
 }
 
 /* The styles below modified from those found in http://demo.swfupload.org/v220/css/default.css */
