Controller now knows about the current set of investigation details. Added popup for new investigations. Added nicer sorting algorithm for investigation list, which isn't completely finished yet.

--- a/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
+++ b/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
@@ -48,7 +48,7 @@ BODY {
 }
 
 /* Change the following 2 styles to change the mouse looks when hovering over clickable images and when leaving those images */
-.image-pointer-enter {
+.pointer-select {
     cursor: pointer;
 }
 
