Added a footer, moving the file status to the east widget. Removed unnecessary HtmlImage class. Removed the printing of some log messages in ExperimentStepHolder. Moved more panel implementations to the panel package.

--- a/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
+++ b/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
@@ -74,6 +74,13 @@ BODY {
     padding: 5px 5px 5px 5px;
 }
 
+/* Footer styles */
+
+/* Width should match that of .header-style */ 
+.footer-style {
+    width: 100%;
+}
+
 /* The styles below modified from those found in http://demo.swfupload.org/v220/css/default.css */
 
 div.fieldset {
