--- a/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
+++ b/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
@@ -51,6 +51,13 @@
     background-color: #EBFFEB;
 }
 
+.captionpanel-border {
+    font-family: verdana, arial, helvetica, sans-serif;
+    border: solid 1px black;
+    border-radius: 10px; /* border-radius is the CSS 3 standard, but many browsers only see -moz-border-radius */
+    -moz-border-radius: 10px;
+}
+
 .parameter-title {
     font-family: verdana, arial, helvetica, sans-serif;
     font-style: italic;
