Removed file upload temporarily from program as was causing weird errors in the war version (versus the development version). Added parameter parsing for the creation of FuGE Metadata. Cleaned up the way that EditInvestigationView is called and how it stores its investigations - it is much simpler now, and can be controlled by SymbaController. Added better display for the addition of parameters.

--- a/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
+++ b/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
@@ -93,6 +93,11 @@
     cursor: pointer;
 }
 
+.tooltip-style {
+    background-color: #B8FF7F;
+    width: 300px;
+}
+
 .image-pointer-exit {
     cursor: default;
 }
