renamed ReadWriteDetailsPanel to InvestigationDetailsPanel, as it is more descriptive. Fixed the way that the SyMBA keywords are stored and displayed in the StorageHelper and its implementations. Fixed bug in FugeConverter that was storing the keywords in the local investigations. Cleaned up EditInvestigationView so that the logic flow was a lot more understandable.

--- a/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
+++ b/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
@@ -41,6 +41,11 @@
     font-style: italic;
 }
 
+/* The style for showing a completed investigation inside a Summary view (either ListBox based or Table based) */
+.summarise-completed {
+    font-style: italic;
+}
+
 /* Various styles for the experiment step table */
 .experiment-EvenStep {
     background-color: #FFFFFF;
