made collapsable fields for files and parameters

--- a/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
+++ b/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
@@ -29,6 +29,7 @@
     padding: 5px;
     border: 2px dashed #ddd;
     background: #ffffe0;
+    font-family: verdana, arial, helvetica, sans-serif;
 }
 
 .textbox-legend {
