--- a/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
+++ b/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
@@ -189,3 +189,12 @@ each stack to not have the google gradient. */
     border: solid 1px #CEE2F2;
     background-color: #F0F5FF;
 }
+
+.within-step-images {
+    height: 30px;
+    padding: 3px 3px 3px 3px;
+    border: solid 1px black;
+    border-radius: 5px; /* border-radius is the CSS 3 standard, but many browsers only see -moz-border-radius */
+    -moz-border-radius: 5px;
+    cursor: pointer;
+}
