DONE: "add new contact" should be "add new data owner" and "add user and login" DONE: put logout on separate line DONE: put login in home panel at the bottom DONE: change alternate color to grey in table DONE: materials must be fixed wrt functionality. grey out appropriate buttons DONE: use suggestbox for parameter subjects DONE: turn off slow-down for file upload

--- a/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
+++ b/symba-webapp/src/main/java/net/sourceforge/symba/web/public/symba.css
@@ -67,8 +67,8 @@ each stack to not have the google gradient. */
 }
 
 .experiment-OddStep {
-    border: solid 1px forestgreen;
-    background-color: #EBFFEB;
+    border: solid 1px #90ee90;
+    background-color: #F0F0F0;
 }
 
 .captionpanel-border {
@@ -107,6 +107,11 @@ each stack to not have the google gradient. */
     color: green;
     text-decoration: underline;
     cursor: pointer;
+}
+
+.images-opaque {
+    opacity: 0.4; /* FF */
+    filter: alpha(opacity=40); /* IE */
 }
 
 /* Change the following 2 styles to change the mouse looks when hovering over clickable images and when leaving those images */
